--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.karam.demo1">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -21,7 +23,8 @@
         <activity android:name=".verify_layout" />
         <activity android:name=".Signup_details" />
         <activity android:name=".profile_edit_layout" />
-        <activity android:name=".all_group"></activity>
+        <activity android:name=".all_group" />
+        <activity android:name=".my_groups"></activity>
     </application>
 
 </manifest>
