--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     package="com.example.karam.demo1">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
         android:allowBackup="true"
@@ -24,7 +26,25 @@
         <activity android:name=".Signup_details" />
         <activity android:name=".profile_edit_layout" />
         <activity android:name=".all_group" />
-        <activity android:name=".my_groups"></activity>
+        <activity android:name=".my_groups" />
+        <activity android:name=".Show_groups" />
+        <activity android:name=".Group_chat" />
+        <activity android:name=".expert_signup" />
+        <activity android:name=".expert_verify_layout" />
+        <activity android:name=".expert_signup_details" />
+        <activity android:name=".expert_signup_detail_2" />
+        <activity android:name=".expert_login_layout" />
+        <activity android:name=".expert_home_layout" />
+        <activity android:name=".expert_profile_update" />
+        <activity android:name=".user_forgot_password" />
+        <activity android:name=".Expert_groups" />
+        <activity android:name=".forgot_password_user_verify" />
+        <activity android:name=".new_password_user" />
+        <activity android:name=".send_feedback" />
+        <activity android:name=".expert_forgot_password" />
+        <activity android:name=".forgot_password_expert_verify" />
+        <activity android:name=".new_password_expert" />
+        <activity android:name=".expert_feedback" />
     </application>
 
 </manifest>
